--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,8 @@ blockquote {
   padding: 0.5em 1em;
   background-color: #f6f8fa;
 }
+![ img ]( /img/cualquiera.jpg#center )
+
 
 hr {
   border: none;
